# SerialisePP

./: .gitmodules  CMakeLists.txt  Importing.md  ProgrammingGuide.md  README.md  SerialisationFormat.md
benchmark/: Benchmark.md  benchmarks.hpp  main.cpp
benchmark/helpers/: benchmark.hpp  benchmark_deserialise.hpp  benchmark_serialise.hpp  buffers.hpp  compound_types.hpp  deserialise_consumer.hpp  optimisation.hpp  output.hpp  random.hpp  random_source_generator.hpp  tagging.hpp  utility.cpp  utility.hpp
include/serialpp/: array.hpp  buffer.hpp  buffers.hpp  common.hpp  dynamic_array.hpp  list.hpp  optional.hpp  pair.hpp  record.hpp  scalar.hpp  serialpp.hpp  static_array.hpp  struct.hpp  tuple.hpp  utility.hpp  variant.hpp
test/: test.hpp  test_array.cpp  test_buffer.cpp  test_buffers.cpp  test_common.cpp  test_compound.cpp  test_dynamic_array.cpp  test_list.cpp  test_optional.cpp  test_pair.cpp  test_record.cpp  test_scalar.cpp  test_static_array.cpp  test_struct.cpp  test_tuple.cpp  test_utility.cpp  test_variant.cpp
test/helpers/: buffer_utility.hpp  common.hpp  compound.hpp  compound_types.hpp  dummy_serialisable.hpp  lifecycle.hpp  mock_serialisable.hpp  mock_small_any_visitor.hpp  record.hpp  record_types.hpp  struct.hpp  test.hpp  utility.hpp
